--- a/projects/swarm-brood/Cargo.toml
+++ b/projects/swarm-brood/Cargo.toml
@@ -3,9 +3,9 @@ name = "swarm-brood"
 publish = false
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
-description = "Send the drone to the target computer and startup the swarm"
-repository = "https://github.com/oovm/sub_projects"
-documentation = "https://docs.rs/sub_projects"
+description = "Command line tool compilation"
+repository = "https://github.com/meta-fs/swarm"
+documentation = "https://docs.rs/swarm-brood"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
