--- a/projects/swarm-inode/Cargo.toml
+++ b/projects/swarm-inode/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "swarm-ssh"
+name = "swarm-inode"
 version = "0.1.2"
 authors = ["Aster <192607617@qq.com>"]
 description = "Transfer files via ssh protocol."
